# hh-dpo-fsdp

./: .gitignore  README.md  compute_batch_log_prob.py  config.yaml  dpo_loss.py  generate_pairwise.py  generate_response.py  process_hh_dataset.py  pyproject.toml  requirements.txt  run_dpo_training.py  run_training.sh  summarize_judged.py  test_chat_template.py  threshold.py  training.py  upload_hf.py
debug_notebooks/: dpo_win_summary.ipynb
gpt_judge_hh_final/: README.md  config-0.01.yaml  config-0.8.yaml  config.yaml  extract_chosen.py  generate_and_upload_multimodel_outputs.py  generate_vllm.py  judge_gpt4o.py  judge_hf_multimodel.py  judge_hf_multimodel_betapairs.py  requirements.txt  utils.py
notes/: analyze_win_rates.ipynb  dpo_win_summary.ipynb
scripts/: run_beta_sweep_and_upload.py
sweep_runs/hh_beta_sweep_20260207_164445/: sweep_summary.json
sweep_runs/hh_beta_sweep_20260207_164445/beta_0.005/: config_beta_0.005.yaml
sweep_runs/hh_beta_sweep_20260207_164445/beta_0.008/: config_beta_0.008.yaml
test_og/: generate_response.py  gpt_judge_pairwise.py  summarize_judged.py
